=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================

Version 4.3.0
 - Fixed: [ 2933020 ] 4.2.3 Bracketing issue in Russian (wooc)
 - Fixed: [ 2931733 } 4.2.3 Name entering and editing (fisharebest)
 - Fixed: [ 2930541 ] PGV custom  tags not being removed on download V4.2.3 (fisharebest)
 - Fixed: [ 2931697 ] 4.2.3 countries.csv ... Iraq is called IRN (fisharebest)
 - Fixed: [ 2927240 ] 4.2.3 ... un-def var gid when importing (fisharebest)
 - Added: [ 1863843 ] Pedigree Google Map (kiwi_pgv/wooc)
 - Changed: UI for user list (volschin)
 - Added: Silhouette images support (kiwi_pgv/wooc)
 - Fixed: [ 2923977 ] PGV 4.2.3 ... redirection via login (wooc)
 - Fixed: [ 2923747 ] Bug in authentication.php (fisharebest)
 - Fixed: [ 2923224 ] Missing Space in Shared Note View GEDCOM Record (wooc)
 - Fixed: Sorting by gedcom filename instead of id (volschin)
 - Fixed: [ 2886694 ] add existing wife/husband SOUR etc (wooc)
 - Fixed: [ 2921858 ] Private marking in marriages (fisharebest)
 - Fixed: is_dead() was ignoring certain undated death events (fisharebest)

Version 4.2.3 2009-12-26
 - Update: TCPDF 4.8.019 (volschin)
 - Fixed: [ 2131272 ] do not update CHAN not remembered (wooc)
 - Fixed: [ 2563934 ] Sitemap module should only submit public URL's (wooc)
 - Fixed: [ 2905609 ] Address handling in quickupdate (volschin)
 - Fixed: [ 1953767 ] 4.1.5rel ... Negative #s in import statistics (fisharebest)
 - Update: PCLzip 2.8.2 (volschin)
 - Update: TCPDF 4.8.016 (volschin)
 - Fixed: [ 1738619 ] Deleting Gedcom file - Misc Entried Remain in DB (fisharebest)
 - Fixed: [ 2881117 ] 4.2.2 Merge 2 Indis makes 2 clones in Fam record (fisharebest)
 - Fixed: [ 2840835 ] Checker reports warning if CONT tag value is all spaces (fisharebest)