@@ -9,6 +9,7 @@
 =====================================================================
 
 Version 4.3.0
+ - Fixed: Include change of favorites in merge of records (volschin)
  - Fixed: [ 2933020 ] 4.2.3 Bracketing issue in Russian (wooc)
  - Fixed: [ 2931733 } 4.2.3 Name entering and editing (fisharebest)
  - Fixed: [ 2930541 ] PGV custom  tags not being removed on download V4.2.3 (fisharebest)
